--- a/themes/SuiteP/css/Dawn/style.css
+++ b/themes/SuiteP/css/Dawn/style.css
@@ -11,7 +11,7 @@ div[type="radioenum"] > br {
   display: none; }
 /* Put date input and calendar button on one line */
 div.edit-view-field[type="date"] > span.dateTime > input.date_input {
-  width: 80%; }
+  width: 30%; }
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 html {
   font-family: sans-serif;
@@ -4633,7 +4633,7 @@ button.close {
     max-width: 100%;
     height: auto;
     line-height: 1; }
-  @media all and (transform-3d), (-webkit-transform-3d) {
+  @media (transform-3d), (-webkit-transform-3d) {
     .carousel-inner > .item {
       -webkit-transition: -webkit-transform 0.6s ease-in-out;
       -moz-transition: -moz-transform 0.6s ease-in-out;
@@ -4830,7 +4830,8 @@ button.close {
 .affix {
   position: fixed; }
   @-ms-viewport {
-    width: device-width; }
+  .carousel-control .glyphicon-chevron-right, .carousel-control .icon-next {
+    width: device-width; } }
 
 .visible-xs {
   display: none !important; }
@@ -14401,7 +14402,7 @@ a#powered_by:hover {
   padding-right: 1%;
   float: right;
   text-align: right;
-  width: 97%;
+  width: 47%;
   text-transform: uppercase; }
 
 .footer_right a {
@@ -15833,8 +15834,8 @@ ul.clickMenu > li > span {
   cursor: pointer; }
 
 @-moz-document url-prefix() {
-  /*margin-right: -7px;*/
   ul.clickMenu:first-child > li > span {
+    /*margin-right: -7px;*/
     margin-right: 0; } }
 
 .inlineButtons ul.clickMenu > li > span {
@@ -16814,7 +16815,7 @@ table legend {
   list-style: none; }
 
 .ui-widget-header {
-  background: #e9e9e9;
+  background: #fff;
   color: #565656;
   border: none; }
 
@@ -20038,7 +20039,7 @@ form[name="wizform"] div.wizard-unique-elem div.step2 table tr td {
 
 .yui-ac-shadow {
   position: absolute;
-  background: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
+  background: #000;
   margin: 0.3em;
   filter: alpha(opacity=10);
   opacity: 0.1;
@@ -20898,7 +20899,7 @@ span.yui-carousel-first-button-disabled {
   bottom: -3px;
   left: -3px;
   right: -3px;
-  background-color: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1); }
+  background-color: #000; }
 
 .yui-tt-shadow-visible {
   filter: alpha(opacity=12);
@@ -22801,7 +22802,7 @@ a.yuimenuitemlabel:hover {
   background-repeat: no-repeat; }
 
 .yui-menu-shadow-visible {
-  background-color: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
+  background-color: #000;
   filter: alpha(opacity=12);
   opacity: 0.12; }
 
